# Cpp_practice_2sem_TheGame

./: .gitignore  CMakeLists.txt  README.md  Tasks
script/: CMakeLists.txt  main.cpp
script/constants/: constants.h
script/game/: game.cpp  game.h
script/level/: level.cpp  level.h
script/menu/: menu.cpp  menu.h
script/objects/: objects.cpp  objects.h
script/player/: player.cpp  player.h
sources/levels/: 1-1-original.txt  1-1.txt  1-2-original.txt  1-2.txt  2-1-original.txt  2-2-original.txt  3-1-original.txt  3-2-original.txt  4-1-original.txt  4-2-original.txt  4-3-original.txt  4-4-original.txt
